--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ SERVER_URL=http://localhost:8080
 
 SENTRY_DSN=
 
-IS_SEND_MESSAGE=TRUE
+IS_SEND_MESSAGE=true
 # Cors - * for all or set separate by commas -  ex.: 'yourdomain1.com, yourdomain2.com'
 CORS_ORIGIN=*
 CORS_METHODS=GET,POST,PUT,DELETE
